<?xml version="1.0"?>
<package format="2">
  <name>amr_trajectory_tools</name>
  <version>0.1.0</version>
  <description>
    ROS package for visualizing and storing trajectory data of Autonomous Mobile Robots (AMRs).
    Provides tools to collect, save, and visualize robot trajectories.
  </description>

  <maintainer email="raghavan.sankar@gmail.com">Koushik Taghav</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>yaml-cpp</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  
  <test_depend>rostest</test_depend>
</package>